@@ -10,6 +10,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class AuthorService {
@@ -42,7 +43,7 @@ public class AuthorService {
         return authorRepository.findAll()
                 .stream()
                 .map(authorMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public void delete(Long id){
