@@ -12,6 +12,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static com.leonardo.bookstoremanager.utils.MessageDTOUtils.creationMessage;
 import static com.leonardo.bookstoremanager.utils.MessageDTOUtils.updatedMessage;
@@ -62,7 +63,7 @@ public class UserService {
         return userRepository.findAll()
                 .stream()
                 .map(userMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public void delete(Long id){
